unpackaged/main/default/objects/Contact/fields/Onboarding_3__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Onboarding 3</label>
    <type>Checkbox</type>
</CustomField>