unpackaged/main/default/objects/Contact/fields/Onboarding__c.field-meta.xml
<CustomField>
    <fullName>Onboarding__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Onboarding?</label>
    <type>Checkbox</type>
</CustomField>