unpackaged/main/default/objects/Contact/fields/Qualified_for_onboarding__c.field-meta.xml
<CustomField>
    <fullName>Qualified_for_onboarding__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Qualified for onboarding</label>
    <type>Checkbox</type>
</CustomField>